Fix showcase section spacing

--- a/src/components/Showcase/styles.module.scss
+++ b/src/components/Showcase/styles.module.scss
@@ -1,5 +1,8 @@
 .root {
-  margin: 4rem 0 0;
+  padding: 7rem 0 0;
+  @media screen and (max-width: 500px) {
+    padding: 4rem 0 0;
+  }
 }
 
 .headline {
